[package]
name = "network-packet-sniffer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
pcap = "0.11"
etherparse = "0.14"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
colored = "2.0"

[dev-dependencies]
tempfile = "3.6"
